// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnlockedIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-UnlockedIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M11 7H5.702V5.5c0-.99.807-1.798 1.798-1.798.816 0 1.5.55 1.72 1.298h1.73c-.245-1.694-1.687-3-3.45-3C5.566 2 4 3.566 4 5.5v1.55c-.566.12-1 .598-1 1.2v4.5c0 .69.56 1.25 1.25 1.25h6.5c.69 0 1.25-.56 1.25-1.25V8.2c0-.602-.434-1.08-1-1.2z"
  />
</Icon>
`;

exports[`UnlockedIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-UnlockedIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M11 7H5.702V5.5c0-.99.807-1.798 1.798-1.798.816 0 1.5.55 1.72 1.298h1.73c-.245-1.694-1.687-3-3.45-3C5.566 2 4 3.566 4 5.5v1.55c-.566.12-1 .598-1 1.2v4.5c0 .69.56 1.25 1.25 1.25h6.5c.69 0 1.25-.56 1.25-1.25V8.2c0-.602-.434-1.08-1-1.2z"
  />
</Icon>
`;

exports[`UnlockedIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-UnlockedIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M11 7H5.702V5.5c0-.99.807-1.798 1.798-1.798.816 0 1.5.55 1.72 1.298h1.73c-.245-1.694-1.687-3-3.45-3C5.566 2 4 3.566 4 5.5v1.55c-.566.12-1 .598-1 1.2v4.5c0 .69.56 1.25 1.25 1.25h6.5c.69 0 1.25-.56 1.25-1.25V8.2c0-.602-.434-1.08-1-1.2z"
  />
</Icon>
`;
